[package]

name = "terminal-linked-hash-map"
version = "0.1.0"
license = "MIT/Apache-2.0"
description = """A fork of linked-hash-map that builds on stable in exchange for
                 not allowing custom hashers."""
authors = [
    "Stepan Koltsov <stepan.koltsov@gmail.com>",
    "Andrew Paseltiner <apaseltiner@gmail.com>",
    "Jonathan Reem <jonathan.reem@gmail.com>"
]

repository = "https://github.com/terminalcloud/linked-hash-map"
keywords = ["data-structures"]
readme = "README.md"
